--- a/frontend/src/components/Styles/body.css
+++ b/frontend/src/components/Styles/body.css
@@ -33,7 +33,8 @@ body {
 .section-title h1 {
   font-size: 2.2rem;
   color: #2c3e50;
-  margin-bottom: 15px;
+  margin-bottom: 125px;
+  margin-top: 45px;
   font-weight: 600;
 }
 
@@ -51,6 +52,7 @@ body {
   border: none;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
   padding: 30px;
+  margin-top: 125px;
   margin-bottom: 40px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -61,7 +63,7 @@ body {
 }
 
 .text-content p {
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   line-height: 1.8;
   color: #555;
   font-size: 1rem;
