--- a/frontend/src/components/Styles/paramsButton.css
+++ b/frontend/src/components/Styles/paramsButton.css
@@ -5,23 +5,33 @@
   margin-bottom: 50px;
   display: block; /* Keep button as a block element */
   padding: 10px 20px; /* Padding for a smaller button */
-  background-color: #000000; /* Black background */
+  background-color: #60a5fa; /* Solid blue background */
   color: white; /* White text */
   font-size: 16px; /* Adjust font size */
   font-weight: bold; /* Bold text */
   text-align: center; /* Center the text */
   border-radius: 50px; /* More rounded corners for modern look */
   text-decoration: none; /* Remove underline */
-  transition: background-color 0.3s, transform 0.2s ease-in-out; /* Smooth hover effect */
+  transition: background 0.5s ease-in-out, transform 0.2s ease-in-out; /* Smooth hover effect */
   margin-left: auto; /* Center horizontally */
   margin-right: auto; /* Center horizontally */
   width: auto; /* Button size adjusts to text */
   max-width: 200px; /* Optional: Limit max width */
-  border: 2px solid rgb(155, 186, 218); /* Black border with subtle thickness */
+  border: 2px solid rgb(155, 186, 218); /* Border color */
 }
 
 .params-button:hover {
-  background-color: #60a5fa; /* Darker green when hovering */
+  background: linear-gradient(
+    to right,
+    white,
+    #60a5fa
+  ); /* Gradient from white to blue */
+  color: black; /* Change text color to black for better contrast with white gradient */
   transform: scale(1.05); /* Slightly increase the button size on hover */
   cursor: pointer; /* Change cursor to indicate the button is clickable */
+}
+
+.params-button:active {
+  background-color: #87ceeb; /* Solid sky blue when clicked/active */
+  color: white; /* Change text color back to white for contrast */
 }
